// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InputBox should render correctly with no props 1`] = `
<div>
  <input
    placeholder=""
    type="text"
    value=""
  />
</div>
`;

exports[`InputBox should render text when passed as props 1`] = `
<div>
  <input
    placeholder=""
    type="text"
    value="test text"
  />
</div>
`;
